# house_rust-react

./: .env  Cargo.toml  README.md  docker-compose.yaml  package-lock.json  package.json  webpack.config.js
frontend/: constants.js  index.js
frontend/components/switch/: switch.js
migrations/2020-06-05-042445_create_home-bool/: down.sql  up.sql
react-frontend/: package-lock.json  package.json
react-frontend/src/: index.js
react-frontend/src/actions/: index.js
react-frontend/src/components/: home-status.js
react-frontend/src/containers/: home-status-container.js
react-frontend/src/reducers/: index.js
rust-backend/: .gitignore  Cargo.toml  Rocket.toml
rust-backend/src/: home_status.rs  schema.rs
rust-backend/static/: index.html
rust-backend/static/assets/: bundle.js
src/: cors.rs  db.rs  home_status.rs  main.rs  schema.rs
static/: index.html
static/assets/: bundle.js
tests/: endpoint_test.py
