[package]
name = "house_rust-react"
version = "0.1.0"
authors = ["Joe Hamburg <joehambrg@gmail.com>"]

[dependencies]
rocket = { version = "0.4.7", default-features = false }
rocket_cors = "0.5.2"
rocket_codegen = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
